[package]
name = "geojson_example"
version = "0.4.0"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
license = "BSD Zero Clause License"
readme = "README.md"
repository = "https://github.com/urschrei/geojson_example"
keywords = ["geo", "geojson", "gis"]

[dependencies]
geo = "0.12.0"
geo-types = "0.4.0"
geojson = "0.15.0"
serde_json = "1.0.39"
rayon = "1.0.3"

[[bin]]
name = "borrowed"
path = "src/borrowed.rs"

[[bin]]
name = "owned"
path = "src/owned.rs"

[[bin]]
name = "borrowed_modify"
path = "src/borrowed_modify.rs"
