[package]
name = "geojson_example"
version = "0.7.0"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
license = "Blue Oak Model License 1.0.0"
readme = "README.md"
repository = "https://github.com/urschrei/geojson_example"
keywords = ["geo", "geojson", "gis"]
edition = "2018"

[dependencies]
geo = "0.17.0"
geo-types = "0.7.0"
geojson = { version =  "0.22.0", features=["geo-types"] }
serde_json = "1.0"
rayon = "1.0"

[[bin]]
name = "borrowed"
path = "src/borrowed.rs"

[[bin]]
name = "owned"
path = "src/owned.rs"

[[bin]]
name = "borrowed_modify"
path = "src/borrowed_modify.rs"
