[package]
name = "geojson_example"
version = "0.7.0"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
license = "Blue Oak Model License 1.0.0"
readme = "README.md"
repository = "https://github.com/urschrei/geojson_example"
keywords = ["geo", "geojson", "gis"]
edition = "2021"

[dependencies]
geo = "0.23.1"
geo-types = "0.7.8"
geojson = { version =  "0.24.0", features=["geo-types"] }
serde_json = "1.0"
rayon = "1.6"

[[bin]]
name = "borrowed"
path = "src/borrowed.rs"

[[bin]]
name = "owned"
path = "src/owned.rs"

[[bin]]
name = "borrowed_modify"
path = "src/borrowed_modify.rs"
